--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -8,6 +8,10 @@ on:
   pull_request:
     branches: [ "main" ]
 
+env:
+  HYDRA_BRANCH: main
+  MEDUSA_BRANCH: main
+
 jobs:
   medusa-hydra-checkout:
     name: Medusa and Hydra dependency
@@ -25,19 +29,19 @@ jobs:
         id: medusa
         run: |
           git clone https://github.com/medusa-ui/medusa.git
-          # optionally checkout a branch
+          git checkout $MEDUSA_BRANCH
           cd medusa/medusa-ui
           mvn clean install --no-transfer-progress
       - name: Build and Install Hydra
         id: hydra
         run: |
           git clone https://github.com/medusa-ui/hydra.git
-          # optionally checkout a branch
+          git checkout $HYDRA_BRANCH
           cd hydra/hydra
           mvn clean install --no-transfer-progress
 
   containerize:
-    name: Containerize the applications
+    name: Build, Containerize and run the integration tests
     runs-on: ubuntu-latest
     needs: medusa-hydra-checkout
 
