--- a/medusa.three/pom.xml
+++ b/medusa.three/pom.xml
@@ -18,6 +18,10 @@
 			<groupId>io.getmedusa</groupId>
 			<artifactId>medusa-ui</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>io.opentelemetry.instrumentation</groupId>
+			<artifactId>opentelemetry-instrumentation-annotations</artifactId>
+		</dependency>
 	</dependencies>
 
 </project>
