--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <java.version>21</java.version>
         <hydra.version>0.0.1-SNAPSHOT</hydra.version>
         <medusa.version>0.9.6-SNAPSHOT</medusa.version>
+        <opentelemetry.version>1.26.0</opentelemetry.version>
     </properties>
 
     <modules>
@@ -53,6 +54,12 @@
                 <groupId>io.getmedusa</groupId>
                 <artifactId>hydra</artifactId>
                 <version>${hydra.version}</version>
+            </dependency>
+            <!-- Digma :: IntelliJ IDEA Plugin -->
+            <dependency>
+                <groupId>io.opentelemetry.instrumentation</groupId>
+                <artifactId>opentelemetry-instrumentation-annotations</artifactId>
+                <version>${opentelemetry.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
