--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -10,7 +10,7 @@ on:
 
 env:
   HYDRA_BRANCH: main
-  MEDUSA_BRANCH: main
+  MEDUSA_BRANCH: rewrite-1.0.0
 
 jobs:
   medusa-hydra-checkout:
@@ -40,7 +40,7 @@ jobs:
           cd hydra/hydra
           mvn clean install --no-transfer-progress
 
-  containerize:
+  test-with-docker:
     name: Build, Containerize and run the integration tests
     runs-on: ubuntu-latest
     needs: medusa-hydra-checkout
