--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -10,7 +10,7 @@ on:
 
 env:
   HYDRA_BRANCH: main
-  MEDUSA_BRANCH: rewrite-1.0.0
+  MEDUSA_BRANCH: origin/rewrite-1.0.0
 
 jobs:
   medusa-hydra-checkout:
