--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -9,7 +9,7 @@ on:
     branches: [ "main" ]
 
 env:
-  HYDRA_ORIGIN_BRANCH: origin/rewrite-1.0.0
+  HYDRA_ORIGIN_BRANCH: origin/feature/import-export-hydra
   MEDUSA_ORIGIN_BRANCH: origin/feature/import-export-hydra
 
 jobs:
