--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
     <description>Demo project Hydra - Medusa</description>
     <properties>
         <java.version>21</java.version>
+        <spring-cloud.version>2023.0.0</spring-cloud.version>
         <hydra.version>0.0.1-SNAPSHOT</hydra.version>
         <medusa.version>0.9.6-SNAPSHOT</medusa.version>
         <opentelemetry.version>1.32.0</opentelemetry.version>
@@ -45,6 +46,14 @@
     </dependencies>
     <dependencyManagement>
         <dependencies>
+            <!-- try to force GitHub actions to use correct spring-cloud version -->
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>${spring-cloud.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
             <dependency>
                 <groupId>io.getmedusa</groupId>
                 <artifactId>medusa-ui</artifactId>
