Change cron schedule to run on Sundays

--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -8,7 +8,7 @@ on:
   pull_request:
     branches: [ "main" ]
   schedule:
-    - cron: '30 3 * * *'
+    - cron: '30 3 * * 0'
 
 env:
   HYDRA_ORIGIN_BRANCH: origin/rewrite-1.0.0
